--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,34 @@ body {
   width: 100%;
 }
 
+.container {
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+
 .score {
   color:white;
-  margin: 10px;
   font-size: 25px;
+  text-align: center;
+}
+
+.recuadro{
+  padding: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: #fefefe;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  border-radius: 20%;
+}
+.suma{
+  color:rgb(255, 255, 255);
+  font-size: 20px;
+  text-align: center;
+  
+  
 }
 
 .board {
