--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
   background-color: rgb(50, 50, 50);
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  margin: 5px;
+  transform: scale(0.90);
+  overflow: hidden;
+  margin: 0%;
 }
 
 .game {
@@ -9,6 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0%;
 }
 
 .header {
@@ -16,13 +20,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
 
 .container {
   display: block;
   justify-content: center;
   align-items: center;
+  margin-top: 0%;
 }
 
 .score {
@@ -32,26 +36,25 @@ body {
 }
 
 .recuadro{
-  padding: 10px;
+  padding: 8px;
   width: 30px;
   height: 30px;
-  background-color: #fefefe;
   justify-content: center;
   align-items: center;
   margin-top: 10%;
-  border-radius: 20%;
+  border-radius: 10%;
+  visibility: hidden;
 }
 .suma{
   color:rgb(255, 255, 255);
   font-size: 20px;
   text-align: center;
-  
-  
 }
 
 .board {
   margin: 20px;
   position: relative;
+  margin-top: 1%;
 }
 
 .squares {
