--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   background-color: rgb(50, 50, 50);
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 5px;
   transform: scale(0.90);
   overflow: hidden;
   margin: 0%;
@@ -13,10 +12,10 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 0%;
+  
 }
 
 .header {
-  border-bottom: 1px solid rgb(50, 50, 50);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,6 +80,7 @@ body {
 
 .riseOnHover:hover {
   margin: 2px;
+  transition: 0.3s;
 }
 
 .horizontalConnectors {
@@ -95,6 +95,7 @@ body {
   top: 0;
   margin: 40px 0;
   display: grid;  
+  transition: 2s;
 }
 
 .slashConnectors, .backslashConnectors {
@@ -102,12 +103,14 @@ body {
   top: 0;
   margin: 40px 40px;
   display: grid;  
+  
 }
 
 .connector {
   display: flex;
   align-items: center;
   justify-content: center;  
+  transition: 2s;
 }
 
 .connectorLine {
