--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 0%;
+  text-align: center;
 }
 
 .score {
@@ -35,19 +36,21 @@ body {
 }
 
 .recuadro{
-  padding: 8px;
+  padding: 15px;
   width: 30px;
   height: 30px;
   justify-content: center;
   align-items: center;
-  margin-top: 10%;
   border-radius: 10%;
   visibility: hidden;
+  margin-top: 6px;
 }
 .suma{
   color:rgb(255, 255, 255);
   font-size: 20px;
   text-align: center;
+  text-align: justify;
+  display: inline-block;
 }
 
 .board {
@@ -103,7 +106,6 @@ body {
   top: 0;
   margin: 40px 40px;
   display: grid;  
-  
 }
 
 .connector {
@@ -116,6 +118,7 @@ body {
 .connectorLine {
   flex-grow: 1;
   height: 8px;
+  transition: .1s;
 }
 
 .connectorLine.vertical {
