--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   background-color: rgb(50, 50, 50);
   font: 14px "Century Gothic", Futura, sans-serif;
-  /*transform: scale(0.90);*/
   overflow: hidden;
   margin: 1%;
 }
@@ -155,4 +154,83 @@ body {
 .boton:hover {
   background-color: #ff6666;
   transform:scale(1.06);
+}
+
+
+.boton {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  font: 16px "Century Gothic", Futura, sans-serif;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  position:relative;
+  left: 40vh;
+  bottom: 50vh;
+}
+
+.boton:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #239cd1,
+    #ee8a3c,
+    #e25a88,
+    #ad4e7c,
+    #a63c4b,
+    #8d6ebc,
+    #8d6ebc,
+    #8d6ebc,
+    #118182,
+    #52d5b2,
+    #f8958e
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.boton:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.boton:hover {
+  transform:scale(1.06);
+  transition-duration: 0.3s;
 }
