--- a/src/index.css
+++ b/src/index.css
@@ -43,10 +43,10 @@ body {
   margin-bottom: 1vh;
   white-space: nowrap;
   bottom: 0vh;
-  
 }
 
 .recuadro{
+  height: 20px;
   padding: 15px;
   align-items: center;
   border-radius: 10%;
@@ -136,23 +136,6 @@ body {
 
 .connectorLine.backslash {
   transform: rotate(45deg);
-}
-
-.boton {
-  position:relative;
-  left: 40vh;
-  bottom: 50vh;
-  border-radius: 4px;
-  background-color: #239cd1;
-  color: white;
-  padding: 8px 16px;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-}
-.boton:hover {
-  background-color: #ff6666;
-  transform:scale(1.06);
 }
 
 
